--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ php:
 env:
   global:
     - TEST_COMMAND="composer test"
-    - DOCKER_VERSION=1.12.0-0~trusty
+    - DOCKER_VERSION=19.03.8
 
 matrix:
   allow_failures:
