--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,13 @@ cache:
   directories:
     - $HOME/.composer/cache
 
-php: 7.2
+php:
+  - 5.4
+  - 5.5
+  - 5.6
+  - 7.0
+  - 7.1
+  - hhvm
 
 env:
   global:
@@ -20,29 +26,21 @@ matrix:
     - php: hhvm
   fast_finish: true
   include:
-    - php: 7.1
+    - php: 5.4
       sudo: required
       services:
-          - docker
-      env: DOCKER_API_VERSION=1.25 DOCKER_VERSION=17.03.2~ce-0~ubuntu-trusty COMPOSER_FLAGS="--prefer-stable --prefer-lowest" COVERAGE=true TEST_COMMAND="composer test-ci"
-    - php: 7.1
-      env: DOCKER_API_VERSION=1.36 DOCKER_VERSION=18.02.0~ce-0~ubuntu TEST_COMMAND="composer lint"
-    - php: 7.2
-      sudo: required
-      services:
-          - docker
-      env: DOCKER_API_VERSION=1.36 DOCKER_VERSION=18.02.0~ce-0~ubuntu
+        - docker
+      env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" COVERAGE=true TEST_COMMAND="composer test-ci"
 
 before_install:
-  - sudo apt-get update
-  - sudo apt-cache madison docker-ce
-  - sudo apt-get -o Dpkg::Options::="--force-confnew" install -y --force-yes docker-ce=${DOCKER_VERSION}
+  - sudo apt-cache madison docker-engine
+  - sudo apt-get -o Dpkg::Options::="--force-confnew" install -y --force-yes docker-engine=${DOCKER_VERSION}
   - travis_retry composer self-update
 
 install:
-  - travis_retry composer install
-  - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction
-  - travis_retry composer require docker-php/docker-php-api:4.${DOCKER_API_VERSION}.*
+  - travis_retry composer update ${COMPOSER_FLAGS} --prefer-source --no-interaction
+  - docker pull registry:latest
+  - docker run -p 5000:5000 -d registry
 
 script:
   - $TEST_COMMAND
