--- a/composer.json
+++ b/composer.json
@@ -26,11 +26,13 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^4.7",
-        "friendsofphp/php-cs-fixer": "^2.0"
+        "friendsofphp/php-cs-fixer": "^2.0",
+        "phpstan/phpstan": "^0.12.25"
     },
     "scripts": {
         "test": "vendor/bin/phpunit",
-        "test-ci": "vendor/bin/phpunit --coverage-clover build/coverage.xml"
+        "test-ci": "vendor/bin/phpunit --coverage-clover build/coverage.xml",
+        "lint": "vendor/bin/phpstan analyse --configuration phpstan.neon"
     },
     "extra": {
         "branch-alias": {
