--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,6 @@ cache:
     - $HOME/.composer/cache
 
 php:
-  - 7.0
   - 7.1
   - 7.2
   - 7.3
@@ -27,7 +26,7 @@ matrix:
     - php: hhvm
   fast_finish: true
   include:
-    - php: 7.0
+    - php: 7.1
       sudo: required
       services:
         - docker
@@ -42,7 +41,7 @@ before_install:
   - sudo apt-get install docker-ce
   - travis_retry composer self-update
 
-install:
+install:gita 
   - travis_retry composer update ${COMPOSER_FLAGS} --prefer-source --no-interaction
   - docker pull registry:latest
   - docker run -p 5000:5000 -d registry
