--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ before_install:
   - sudo apt-get install docker-ce
   - travis_retry composer self-update
 
-install:gita 
+install:
   - travis_retry composer update ${COMPOSER_FLAGS} --prefer-source --no-interaction
   - docker pull registry:latest
   - docker run -p 5000:5000 -d registry
