--- a/.travis.yml
+++ b/.travis.yml
@@ -59,7 +59,7 @@ script:
 after_success:
   - if [[ "$COVERAGE" = true ]]; then wget https://scrutinizer-ci.com/ocular.phar; fi
   - if [[ "$COVERAGE" = true ]]; then php ocular.phar code-coverage:upload --format=php-clover build/coverage.xml; fi
-  - if [[ "$SONAR" = true ]]; then /opt/sonar-scanner; fi
+  - if [[ "$SONAR" = true ]]; then /opt/sonar-scanner/bin/sonar-scanner; fi
 
 after_script:
   - sudo cat /var/log/upstart/docker.log
