--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -18,3 +18,4 @@ sonar.links.issue=https://github.com/INSSET/projet-specialite-docker-php/issues
 sonar.sources=.
 sonar.host.url=http://37.187.137.82:9050
 sonar.login=6e3f4e9a835c2b8e084dc3378167a446f1209372
+sonar.php.coverage.reportPaths=build/coverage.xml
