--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,6 @@ env:
     - LINT_COMMAND="composer lint"
     - TEST_COMMAND="composer test"
     - DOCKER_VERSION=19.03.8
-    - SONAR_COMMAND="sonar-scanner"
 
 matrix:
   allow_failures:
@@ -62,6 +61,8 @@ after_success:
   - if [[ "$COVERAGE" = true ]]; then vendor/bin/phpunit --coverage-clover=coverage.clover; fi
   - if [[ "$COVERAGE" = true ]]; then wget https://scrutinizer-ci.com/ocular.phar; fi
   - if [[ "$COVERAGE" = true ]]; then php ocular.phar code-coverage:upload --access-token="0e196f4fccde66a08ad662bbcd892293ed9d1ec538fc02e387c2d2ef2c6dd54a" --format=php-clover coverage.clover; fi
+  - if [[ "$SONAR" = true ]]; then vendor/bin/phpunit; fi
+  - if [[ "$SONAR" = true ]]; then sonar-scanner; fi
 
 after_script:
   - sudo cat /var/log/upstart/docker.log
