--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     },
     "require": {
-        "php": ">=7.1",
+        "php": ">=7.3",
         "jane-php/open-api-runtime": "4.2.0",
         "jane-php/open-api": "4.2.0",
         "jane-php/json-schema": "4.2.0",
@@ -24,8 +24,8 @@
         "php-http/client-common": "^1.6",
         "php-http/socket-client": "^1.3",
         "php-http/message": "^1.0",
-        "symfony/filesystem": "^2.3 || ^3.0 || ^4.0",
-        "symfony/process": "^2.3 || ^3.0 || ^4.0"
+        "symfony/filesystem": "^2.3 || ^3.0 || ^4.0 || ^5.0",
+        "symfony/process": "^2.3 || ^3.0 || ^4.0 || ^5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0",
