--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,5 +4,5 @@ site_description: Docker API Client Library for PHP
 repo_url: https://github.com/Morgonus/docker-api-php-client
 
 pages:
-  Home: index.md
-  Installation: installation.md
+  Home: docs/index.md
+  Installation: docs/installation.md
