fix error docs generate and travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,9 @@ cache:
     - $HOME/.composer/cache
 
 php:
+  - 7.2
   - 7.3
-  - 7.4
+  - hhvm
 
 env:
   global:
@@ -24,6 +25,8 @@ env:
     - DOCKER_VERSION=19.03.8
 
 matrix:
+  allow_failures:
+    - php: hhvm
   fast_finish: true
   include:
     - php: 7.3
