travis error docker unknow

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@ dist: xenial
 addons:
   sonarcloud:
     organization: morgonus
-
+  apt:
+    packages:
+      - docker-ce
 cache:
   directories:
     - $HOME/.composer/cache
@@ -24,10 +26,6 @@ env:
 before_install:
   - sudo apt-cache madison docker-engine
   - sudo apt-get install apt-transport-https ca-certificates curl software-properties-common
-  - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add –
-  - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu  $(lsb_release -cs)  stable"
-  - sudo apt-get update
-  - sudo apt-get install docker-ce
   - sudo apt-get install unzip wget nodejs
   - travis_retry composer self-update
   - sudo docker ps
