travis error docker unknow

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,6 @@ dist: xenial
 addons:
   sonarcloud:
     organization: morgonus
-  apt:
-    packages:
-      - docker-ce
 cache:
   directories:
     - $HOME/.composer/cache
@@ -28,6 +25,10 @@ before_install:
   - sudo apt-get install apt-transport-https ca-certificates curl software-properties-common
   - sudo apt-get install unzip wget nodejs
   - travis_retry composer self-update
+  - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+  - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+  - sudo apt-get update
+  - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
   - sudo docker ps
   - sudo docker version
 
