--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_install:
   - travis_retry composer self-update
   - sudo apt-get update
   - sudo apt-cache madison docker-ce
-  - sudo apt-get -o Dpkg::Options::="--force-confnew" install -y --force-yes docker-ce=${DOCKER_VERSION}
+  - sudo apt-get -o Dpkg::Options::="--force-confnew" install -y --force-yes docker-ce
   - sudo docker ps
   - sudo docker version
 
