--- a/.travis.yml
+++ b/.travis.yml
@@ -2,35 +2,49 @@ language: php
 sudo: required
 dist: xenial
 
-services:
-  - docker
-
 addons:
   sonarcloud:
     organization: morgonus
+
+services:
+  - docker
 
 cache:
   directories:
     - $HOME/.composer/cache
 
-php: 7.4
+php:
+  - 7.2
+  - 7.3
+  - 7.4
+  - hhvm
 
 env:
   global:
     - LINT_COMMAND="composer lint"
     - TEST_COMMAND="composer test"
-  matrix:
-    - DOCKER_VERSION=19.03.11~ce-0~ubuntu
+    - DOCKER_VERSION=19.03.8
+
+matrix:
+  allow_failures:
+    - php: hhvm
+  fast_finish: true
+  include:
+    - php: 7.3
+      sudo: required
+      services:
+        - docker
+      env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" COVERAGE=true SONAR=true TEST_COMMAND="composer test-ci"
 
 before_install:
+  - sudo apt-cache madison docker-engine
   - sudo apt-get install apt-transport-https ca-certificates curl software-properties-common
+  - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add –
+  - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu  $(lsb_release -cs)  stable"
+  - sudo apt-get update
+  - sudo apt-get install docker-ce
   - sudo apt-get install unzip wget nodejs
   - travis_retry composer self-update
-  - sudo apt-get update
-  - sudo apt-cache madison docker-ce
-  - sudo apt-get -o Dpkg::Options::="--force-confnew" install -y --force-yes docker-ce=${DOCKER_VERSION}
-  - sudo docker ps
-  - sudo docker version
 
 install:
   - travis_retry composer update ${COMPOSER_FLAGS} --prefer-source --no-interaction
