--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,7 @@ before_install:
   - sudo apt-get install docker-ce
   - sudo apt-get install unzip wget nodejs
   - travis_retry composer self-update
+  - docker pull busybox:latest
 
 install:
   - travis_retry composer update ${COMPOSER_FLAGS} --prefer-source --no-interaction
