--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,6 @@ php:
   - 7.2
   - 7.3
   - 7.4
-  - hhvm
 
 env:
   global:
@@ -25,19 +24,8 @@ env:
     - TEST_COMMAND="composer test"
     - DOCKER_VERSION=19.03.8
 
-matrix:
-  allow_failures:
-    - php: hhvm
-  fast_finish: true
-  include:
-    - php: 7.3
-      sudo: required
-      services:
-        - docker
-      env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" COVERAGE=true SONAR=true TEST_COMMAND="composer test-ci"
-
 before_install:
-  - sudo apt-cache madison docker-engine
+  - sudo apt-cache madison docker-ce
   - sudo apt-get install apt-transport-https ca-certificates curl software-properties-common
   - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add –
   - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu  $(lsb_release -cs)  stable"
